--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+0.3.1
+-----
+Fixed support for zipped fb2 (new dedicated mimetype: https://bugs.freedesktop.org/show_bug.cgi?id=45795)
+Code improvements
+
 0.3
 -----
 KDE Frameworks 5 porting
